connection string changed to fit docker

--- a/eProdaja/appsettings.json
+++ b/eProdaja/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source =.; Initial Catalog = eProdajaIspit; Integrated Security = true"
-    //"Data Source=localhost, 1434;Initial Catalog=eProdaja; user=sa; Password=QWEasd123!"
+    "DefaultConnection": "Data Source=localhost, 1433;Initial Catalog=eProdaja; user=sa; Password=QWElkj132!"
+    //Data Source=localhost, 1433;Initial Catalog=eProdaja; user=sa; Password=QWElkj132!
+    //Data Source =.; Initial Catalog = eProdajaIspit; Integrated Security = true
   },
   "Logging": {
     "LogLevel": {
